kind/old/gateway-nginx.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: keycloak-gateway
  namespace: keycloak-namespace
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: auth.s4v3.local
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: Same
